ASCII added